@@ -737,3 +737,4 @@ def _undefer_column_name(key, column):
         column.key = key
     if column.name is None:
         column.name = key
+    util.reset_memoized(column, 'description')
